# Research-Tool

./: .env.example  .gitattributes  .gitignore  README.md  agents.py  app.py  main.py  pyproject.toml  requirements.txt  tools.py  ui.py
.streamlit/: config.toml
views/: about.py  dashboard.py  history.py  home.py  research.py
