[project]
name = "research-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "html5lib>=1.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.5",
    "lxml>=6.1.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "typing-extensions>=4.15.0",
]
